--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "dependencies": {
 	"backbone": "~1.0.0",
 	"underscore": "~1.5.1",
-	"jquery": "~2.0.3"
+	"jquery": "~2.0.3",
+	"marionette": "~1.1.0"
     }
 }
